// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GoogleMap renders correctly with props and a list of one 1`] = `
<div
  center={
    Object {
      "lat": 52.473092,
      "lng": 13.327628,
    }
  }
  className="mock-google-map"
  mapContainerStyle={
    Object {
      "height": "100px",
    }
  }
  options={
    Object {
      "mapId": "map-id",
      "streetViewControl": false,
    }
  }
  zoom={1}
>
  <div
    className="mock-marker"
    clickable={true}
    onClick={[Function]}
    position={
      Object {
        "lat": 52.123,
        "lng": 13.123,
      }
    }
    title="title1"
  />
</div>
`;

exports[`GoogleMap renders correctly with props and a list of one 2`] = `
<div
  center={
    Object {
      "lat": 52.473092,
      "lng": 13.327628,
    }
  }
  className="mock-google-map"
  mapContainerStyle={
    Object {
      "height": "100px",
    }
  }
  options={
    Object {
      "mapId": "map-id",
      "streetViewControl": false,
    }
  }
  zoom={1}
>
  <div
    className="mock-marker"
    clickable={true}
    onClick={[Function]}
    position={
      Object {
        "lat": 52.123,
        "lng": 13.123,
      }
    }
    title="title1"
  />
  <div
    className="mock-info-window"
    onCloseClick={[Function]}
    options={
      Object {
        "maxWidth": 200,
      }
    }
    position={
      Object {
        "lat": 52.123,
        "lng": 13.123,
      }
    }
  >
    <a
      href="/picture/uid-bar"
    >
      <h1>
        title1
      </h1>
      <picture>
        <img
          alt="title1"
          css={
            Object {
              "map": undefined,
              "name": "m2yydh",
              "next": undefined,
              "styles": "
	padding-top: 66.73913043478261%;
",
              "toString": [Function],
            }
          }
          height={110}
          image={
            Object {
              "layout": "CONSTRAINED",
            }
          }
          width={164}
        />
      </picture>
    </a>
  </div>
</div>
`;

exports[`GoogleMap renders correctly with props and a list of two 1`] = `
<div
  center={
    Object {
      "lat": 52.473092,
      "lng": 13.327628,
    }
  }
  className="mock-google-map"
  mapContainerStyle={
    Object {
      "height": "100px",
    }
  }
  options={
    Object {
      "mapId": "map-id",
      "streetViewControl": false,
    }
  }
  zoom={1}
>
  <div
    className="mock-marker"
    clickable={false}
    onClick={[Function]}
    position={
      Object {
        "lat": 52.123,
        "lng": 13.123,
      }
    }
    title="title1"
  />
  <div
    className="mock-marker"
    clickable={false}
    onClick={[Function]}
    position={
      Object {
        "lat": 52.456,
        "lng": 13.456,
      }
    }
    title="title2"
  />
</div>
`;

exports[`GoogleMap renders correctly with props and a list of zero 1`] = `
<div
  center={
    Object {
      "lat": 52.473092,
      "lng": 13.327628,
    }
  }
  className="mock-google-map"
  mapContainerStyle={
    Object {
      "height": "100px",
    }
  }
  options={
    Object {
      "mapId": "map-id",
      "streetViewControl": false,
    }
  }
  zoom={1}
>
  <div
    className="mock-marker"
    clickable={false}
    onClick={[Function]}
    position={
      Object {
        "lat": 52.123,
        "lng": 13.123,
      }
    }
    title="title1"
  />
</div>
`;
